--- a/index.html
+++ b/index.html
@@ -7,22 +7,22 @@
   <link rel="stylesheet" href="styles.css" />
   <meta name="description" content="BAEUDA: website belajar interaktif untuk Gen Z & Gen Alpha dengan gamifikasi, tantangan, dan konten singkat.">
 </head>
-<body>
-  <header class="header">
-    <div class="container nav">
-      <div class="brand">
-        <div class="logo" aria-hidden="true"></div>
-        <h1>BAEUDA</h1>
-      </div>
-      <nav class="navlinks">
-        <a href="index.html" class="hide-m">Home</a>
-        <a href="#fitur" class="hide-m">Fitur</a>
-        <a href="#leaderboard" class="hide-m">Leaderboard</a>
-        <a class="btn ghost" href="login.html">Log In</a>
-        <a class="btn brand" href="register.html">Daftar</a>
-      </nav>
+<header class="header">
+  <div class="container nav">
+    <div class="brand">
+      <img src="logo.png" alt="Logo BAEUDA" class="logo" />
+      <h1>BAEUDA</h1>
     </div>
-  </header>
+    <nav class="navlinks">
+      <a href="index.html" class="hide-m">Home</a>
+      <a href="#fitur" class="hide-m">Fitur</a>
+      <a href="#leaderboard" class="hide-m">Leaderboard</a>
+      <a class="btn ghost" href="login.html">Log In</a>
+      <a class="btn brand" href="register.html">Daftar</a>
+    </nav>
+  </div>
+</header>
+
 
   <main class="container hero">
     <section class="grid2">
@@ -78,17 +78,17 @@
           <tbody>
             <tr>
               <td class="rank">#1</td>
-              <td class="name"><span>🟣</span> Owen</td>
+              <td class="name"><span>🟣</span> Fylbert Owen Marckwardt Widjaja</td>
               <td>Matematika — 1.240 XP</td>
             </tr>
             <tr>
               <td class="rank">#2</td>
-              <td class="name"><span>🔵</span> Bot 1</td>
+              <td class="name"><span>🔵</span> Dafa</td>
               <td>Bahasa Inggris — 1.120 XP</td>
             </tr>
             <tr>
               <td class="rank">#3</td>
-              <td class="name"><span>🟢</span> Bot 2</td>
+              <td class="name"><span>🟢</span> Naya</td>
               <td>IPA — 980 XP</td>
             </tr>
           </tbody>
