--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
   <header class="header">
     <div class="container nav">
       <div class="brand">
-        <div class="logo" aria-hidden="true"></div>
+        <img src="logo.png" alt="BAEUDA Logo" class="logo">
         <h1>BAEUDA</h1>
       </div>
       <nav class="navlinks">
@@ -20,6 +20,8 @@
       </nav>
     </div>
   </header>
+</body>
+
 
   <main class="container">
     <div class="card form-wrap" role="form" aria-labelledby="title">
