--- a/register.html
+++ b/register.html
@@ -28,10 +28,10 @@
 
       <form id="register-form" action="#" method="post" onsubmit="alert('Demo saja. Tambahkan endpoint backend untuk produksi.'); return false;">
         <label for="name">Nama Lengkap</label>
-        <input class="input" type="text" id="name" name="name" placeholder="Aurel K." required />
+        <input class="input" type="text" id="name" name="name" placeholder="John Doe" required />
 
         <label for="email">Email</label>
-        <input class="input" type="email" id="email" name="email" placeholder="nama@sekolah.id" required autocomplete="email" />
+        <input class="input" type="email" id="email" name="email" placeholder="johndoe@gmail.com" required autocomplete="email" />
 
         <div class="input-row">
           <label for="password">Kata Sandi</label>
