--- a/login.html
+++ b/login.html
@@ -30,7 +30,7 @@
 
       <form action="#" method="post" onsubmit="alert('Demo saja. Tambahkan endpoint backend untuk produksi.'); return false;">
         <label for="email">Email atau Username</label>
-        <input class="input" type="text" id="email" name="email" placeholder="nama@sekolah.id" required autocomplete="username" />
+        <input class="input" type="text" id="email" name="email" placeholder="johndoe@gmail.com" required autocomplete="username" />
 
         <div class="input-row">
           <label for="password-login">Kata Sandi</label>
