--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>BAEUDA — Bahasa dan Edukasi Digital Anak Muda</title>
+  <title>BAEUDA</title>
+  <link rel="shortcut icon" href="logo.png" type="image/x-icon">
   <link rel="stylesheet" href="styles.css" />
   <meta name="description" content="BAEUDA: website belajar interaktif untuk Gen Z & Gen Alpha dengan gamifikasi, tantangan, dan konten singkat.">
 </head>
